Allow styling numberinput with style=... And clamp changes to min/max.

--- a/includes/ext.numberinput.css
+++ b/includes/ext.numberinput.css
@@ -1,7 +1,7 @@
 /* extensions/RiskiTools/includes/ext.numberinput.css */
 
 .riski-number-input {
-    width: 100px;
+    width: 6ch;
     padding: 4px 8px;
     font-size: 14px;
     font-family: inherit;
